# rust-raytracing

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs
src/: main.rs
src/application/: handler.rs  mod.rs  parameters.rs
src/application/core/: error.rs
src/application/pipelines/: compute_pipeline.rs  descriptor.rs  mod.rs  push_constant.rs  shader.rs
src/application/pipelines/implementation/: mod.rs  raytracing_pipeline.rs  test_pipeline.rs
src/application/scene/: camera.rs  material.rs  mod.rs  model.rs  scene.rs  triangle.rs
src/application/scene/bvh/: aabb.rs  bottom_up_sah.rs  default_bottom_up.rs  default_top_down.rs  mod.rs  ploc.rs  ploc_parallel.rs  top_down_sah.rs
src/application/vulkan/: clean.rs  gui.rs  immediate.rs  init.rs  mod.rs  render.rs  types.rs
src/application/vulkan/descriptors/: images.rs
src/application/vulkan/descriptors_helper/: allocator.rs  buffer.rs  images.rs  layout_builder.rs  mod.rs
src/application/vulkan/setup/: allocator.rs  commands.rs  debug.rs  draw_resources.rs  entry.rs  frame_data.rs  framebuffer.rs  instance.rs  mod.rs  surface.rs  swapchain.rs  sync_structures.rs
src/application/window/: events.rs  init.rs  key_map.rs  mod.rs
src/application/winit/: event_loop.rs  mod.rs  window.rs
src/shaders/: raytracing.glsl  raytracing.slang  test.slang
src/shaders/ploc/preprocessing/: preprocessing.glsl
src/shaders/raytracer/: camera.slang  hit.slang  light.slang  ray.slang  raytracer.slang
src/shaders/scene/: bvh.slang  material.slang  scene.slang  triangle.slang
(+19 files in other folders)
