[package]
name = "rust-vulkan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.38.0"
ash-window = "0.13.0"
env_logger = "0.11.3"
log = "0.4.22"
vk-mem = "0.4.0"
glam = "0.28.0"
tobj = "4.0.2"
imgui = "0.12.0"
imgui-winit-support = "0.13.0"
imgui-rs-vulkan-renderer = { version = "1.16.0", features = ["vk-mem", "dynamic-rendering"]}
winit = "0.30.5"
